--- a/Finaizen/src/pages/User/dashboard.html
+++ b/Finaizen/src/pages/User/dashboard.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard | Finaizen</title>
-  <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/dashboard.css">
+  <link rel="stylesheet" href="../../css/styles.css">
+  <link rel="stylesheet" href="../../css/dashboard.css">
 </head>
 
 <body>
@@ -60,7 +60,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="../js/main.js"></script>
-  <script src="../js/dashboard.js"></script>
+  <script src="../../js/main.js"></script>
+  <script src="../../js/dashboard.js"></script>
 </body>
 </html>
