Subir de nuevo la Rama

--- a/Finaizen/src/pages/Admin/gestion-usuarios.html
+++ b/Finaizen/src/pages/Admin/gestion-usuarios.html
@@ -41,7 +41,7 @@
             <table class="user-table">
                 <thead>
                     <tr>
-                        <th>Usuario</th>
+                        <th>Usuario1</th>
                         <th>Email</th>
                         <th>Fecha Registro</th>
                         <th>Estado</th>
