--- a/Finaizen/src/pages/Admin/dashboard.html
+++ b/Finaizen/src/pages/Admin/dashboard.html
@@ -40,7 +40,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="../../js/dashboradAdmin.js"></script>
+<script src="../../js/dashboardAdmin.js"></script>
 <script src="../../js/main.js"></script>
 </body>
 </html>
