Kevin Perez: Se realizaron cambios con respecto a la presentacion del programa, se agregaron los mockups de Inicio de sesion, registro de usuario, historial de registros de ingreso y egresos, modifiacion sobre el apartado de registro de ingresos y egresos y arreglando algunos errores en la presentacion de algunas paginas.

--- a/Finaizen/src/pages/User/administrar_registros.html
+++ b/Finaizen/src/pages/User/administrar_registros.html
@@ -61,8 +61,8 @@
 
                 <!-- Botones de Acción -->
                 <div class="action-buttons">
-                    <a href="nuevo_ingreso.html" class="btn-action btn-income">Crear nuevo ingreso</a>
-                    <a href="nuevo_egreso.html" class="btn-action btn-expense">Crear nuevo egreso</a>
+                    <a href="nuevo-ingreso.html" class="btn-action btn-income">Crear nuevo ingreso</a>
+                    <a href="nuevo-egreso.html" class="btn-action btn-expense">Crear nuevo egreso</a>
                 </div>
             </div>
         </main>
