--- a/Finaizen/src/pages/User/dashboard.html
+++ b/Finaizen/src/pages/User/dashboard.html
@@ -26,10 +26,10 @@
           <p>Café <span class="negative">-$8.50</span></p>
           <p>Super <span class="negative">-$45.20</span></p>
           <p>Salario <span class="positive">+$1,500</span></p>
-          <a href="#">Ver historial</a>
+          <a href="historial.html">Ver historial</a>
           <div class="buttons">
-            <button class="btn ingreso">Ingreso</button>
-            <button class="btn gasto">Gasto</button>
+            <a href="nuevo-ingreso.html" class="btn ingreso">Ingreso</a>
+            <a href="nuevo-egreso.html" class="btn gasto">Gasto</a>
           </div>
         </div>
 
