--- a/Finaizen/src/pages/Base/index.html
+++ b/Finaizen/src/pages/Base/index.html
@@ -13,16 +13,8 @@
 </head>
 <body class="antialiased">
 
-    <!-- Navbar -->
-    <header class="bg-white shadow-md sticky top-0 z-10">
-        <nav class="max-w-7xl mx-auto p-4 flex justify-between items-center">
-            <div class="text-2xl font-bold brand-text-color">Finaizen</div>
-            <div class="flex items-center space-x-4">
-                <a href="#login-register" class="text-gray-600 hover:text-gray-900 font-medium">Iniciar sesión</a>
-                <a href="#login-register" class="btn-brand">Registrarse</a>
-            </div>
-        </nav>
-    </header>
+    <!-- Navbar se cargará aquí -->
+    <div id="navbar-container"></div>
 
     <!-- Sección Principal (Hero) -->
     <section class="min-h-[70vh] flex items-center justify-center text-center py-20 bg-gray-50">
@@ -34,17 +26,9 @@
             <p class="text-xl md:text-2xl text-gray-600 font-medium mb-10">
                 "Donde cada gasto tiene un propósito y cada meta se hace realidad."
             </p>
-            <div id="login-register" class="max-w-sm mx-auto bg-white p-6 md:p-8 rounded-xl shadow-lg border border-gray-200">
-                <h2 class="text-2xl font-semibold mb-6 text-gray-800">Comienza Ahora</h2>
-                <!-- El atributo onsubmit="return false;" evita que el formulario se envíe a una URL real -->
-                <form onsubmit="return false;">
-                    <input type="email" placeholder="Correo electrónico" required class="w-full p-3 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500">
-                    <input type="password" placeholder="Contraseña" required class="w-full p-3 mb-6 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500">
-                    <button type="submit" class="btn-brand w-full py-3">
-                        Iniciar Sesión / Registrarse
-                    </button>
-                </form>
-                <p class="text-sm mt-4 text-gray-500">Al registrarte, aceptas nuestros términos y condiciones.</p>
+            <div class="flex gap-4 justify-center">
+                <a href="login.html" class="btn-brand px-8 py-3 text-lg font-semibold">Iniciar Sesión</a>
+                <a href="register.html" class="btn-brand px-8 py-3 text-lg font-semibold">Registrarse</a>
             </div>
         </div>
     </section>
@@ -183,5 +167,6 @@
         </div>
     </footer>
 
+    <script src="../../js/navbar_main.js"></script>
 </body>
 </html>
