--- a/Finaizen/src/pages/User/nuevo-egreso.html
+++ b/Finaizen/src/pages/User/nuevo-egreso.html
@@ -50,11 +50,52 @@
                         </div>
                     </div>
 
-                    <!-- Columna de Fecha -->
+                    <!-- Columna de Selección de Tiempo (Dinámica) -->
                     <div class="form-group">
-                        <label for="fecha-egreso">Seleccione una fecha:</label>
-                        <!-- Este input se transformará en el calendario -->
-                        <input type="text" id="fecha-egreso" placeholder="Seleccionar...">
+                        <label id="time-selector-label">Seleccione día del mes:</label>
+                        
+                        <!-- Selector de días de la semana (para Diario y Semanal) -->
+                        <div class="days-selector" id="days-selector" style="display: none;">
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="lunes">
+                                <span>Lunes</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="martes">
+                                <span>Martes</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="miercoles">
+                                <span>Miércoles</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="jueves">
+                                <span>Jueves</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="viernes">
+                                <span>Viernes</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="sabado">
+                                <span>Sábado</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="domingo">
+                                <span>Domingo</span>
+                            </label>
+                        </div>
+
+                        <!-- Selector de día del mes (para Mensual) - Calendario visual -->
+                        <div class="month-day-selector" id="month-day-selector" style="display: none;">
+                            <div class="calendar-grid" id="calendar-grid"></div>
+                            <input type="hidden" id="day-of-month" value="">
+                        </div>
+
+                        <!-- Selector de fecha completa (para Anual) -->
+                        <div class="date-selector" id="date-selector" style="display: none;">
+                            <input type="date" id="specific-date">
+                        </div>
                     </div>
                 </div>
 
