--- a/Finaizen/src/pages/User/nuevo-ingreso.html
+++ b/Finaizen/src/pages/User/nuevo-ingreso.html
@@ -39,17 +39,51 @@
                         </ul>
                     </div>
 
-                    <!-- Columna de Días -->
+                    <!-- Columna de Selección de Tiempo (Dinámica) -->
                     <div class="form-group">
-                        <label>Seleccione los días:</label>
-                        <div class="days-selector">
-                            <button type="button" class="day-btn active" data-day="lunes">Lunes</button>
-                            <button type="button" class="day-btn" data-day="martes">Martes</button>
-                            <button type="button" class="day-btn" data-day="miercoles">Miércoles</button>
-                            <button type="button" class="day-btn active" data-day="jueves">Jueves</button>
-                            <button type="button" class="day-btn" data-day="viernes">Viernes</button>
-                            <button type="button" class="day-btn" data-day="sabado">Sábado</button>
-                            <button type="button" class="day-btn" data-day="domingo">Domingo</button>
+                        <label id="time-selector-label">Seleccione los días:</label>
+                        
+                        <!-- Selector de días (para Diario y Semanal) -->
+                        <div class="days-selector" id="days-selector">
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="lunes">
+                                <span>Lunes</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="martes">
+                                <span>Martes</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="miercoles">
+                                <span>Miércoles</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="jueves">
+                                <span>Jueves</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="viernes">
+                                <span>Viernes</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="sabado">
+                                <span>Sábado</span>
+                            </label>
+                            <label class="day-checkbox">
+                                <input type="checkbox" data-day="domingo">
+                                <span>Domingo</span>
+                            </label>
+                        </div>
+
+                        <!-- Selector de día del mes (para Mensual) - Calendario visual -->
+                        <div class="month-day-selector" id="month-day-selector" style="display: none;">
+                            <div class="calendar-grid" id="calendar-grid"></div>
+                            <input type="hidden" id="day-of-month" value="">
+                        </div>
+
+                        <!-- Selector de fecha completa (para Anual) -->
+                        <div class="date-selector" id="date-selector" style="display: none;">
+                            <input type="date" id="specific-date">
                         </div>
                     </div>
                 </div>
