Kevin Perez: Agregando nuevo navbar para la configuracion de los ajustes de usuario y modificando el tratamiento de datos para el inicio de sesion.

--- a/Finaizen/src/pages/User/config_seguridad.html
+++ b/Finaizen/src/pages/User/config_seguridad.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../css/style/pages/config_seguridad.css">
 </head>
 
-<body class="layout-centered">
+<body>
     <div class="container">
         <!-- El sidebar de configuración se cargará aquí -->
         <div id="sidebar-container" data-sidebar="config"></div>
