--- a/Finaizen/src/pages/User/dashboard.html
+++ b/Finaizen/src/pages/User/dashboard.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../../css/style/pages/dashboard_user.css">
 </head>
 
-<body class="layout-centered">
+<body>
   <div class="container">
     <!-- Sidebar se cargará aquí -->
     <div id="sidebar-container" data-sidebar="user"></div>
