--- a/Finaizen/src/pages/User/logros.html
+++ b/Finaizen/src/pages/User/logros.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../css/style/components/sidebar.css">
     <link rel="stylesheet" href="../../css/style/pages/logros.css">
 </head>
-<body class="layout-centered">
+<body>
     <div class="container">
         <div id="sidebar-container" data-sidebar="user"></div>
 
