--- a/Finaizen/src/pages/User/nuevo-egreso.html
+++ b/Finaizen/src/pages/User/nuevo-egreso.html
@@ -12,7 +12,7 @@
     <!-- CSS para el Calendario (¡Importante!) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
-<body class="layout-centered">
+<body>
     <div class="container">
         <!-- El Sidebar se carga aquí -->
         <div id="sidebar-container" data-sidebar="user"></div>
