--- a/Finaizen/src/pages/User/nuevo-ingreso.html
+++ b/Finaizen/src/pages/User/nuevo-ingreso.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../css/style/components/sidebar.css">
     <link rel="stylesheet" href="../../css/style/pages/nuevo_ingreso.css">
 </head>
-<body class="layout-centered">
+<body>
     <div class="container">
         <!-- El Sidebar se carga aquí -->
         <div id="sidebar-container" data-sidebar="user"></div>
