--- a/Finaizen/src/pages/User/config_cuenta.html
+++ b/Finaizen/src/pages/User/config_cuenta.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../css/style/pages/config_cuenta.css">
 </head>
 
-<body class="layout-centered">
+<body>
     <div class="container">
         <!-- El sidebar de configuración se cargará aquí dinámicamente -->
         <div id="sidebar-container" data-sidebar="config"></div>
