--- a/Finaizen/src/pages/User/administrar_registros.html
+++ b/Finaizen/src/pages/User/administrar_registros.html
@@ -9,8 +9,14 @@
     <link rel="stylesheet" href="../../css/style/base/main.css">
     <link rel="stylesheet" href="../../css/style/components/sidebar.css">
     <link rel="stylesheet" href="../../css/style/pages/administrar_registros.css">
+    <link rel="stylesheet" href="../../css/style/components/confirm dialog/confirm_dialog.css">
+    <link rel="stylesheet" href="../../css/style/components/modals/modal_edit_record.css">
 </head>
 <body>
+    <!-- AÑADIR LOS PLACEHOLDERS PARA LOS COMPONENTES -->
+    <div id="edit-modal-placeholder"></div>
+    <div id="confirm-dialog-placeholder"></div>
+
     <div class="container">
         <!-- El Sidebar se carga aquí -->
         <div id="sidebar-container" data-sidebar="user"></div>
@@ -68,7 +74,11 @@
         </main>
     </div>
 
-    <!-- Scripts -->
+     <!-- Scripts (el orden es importante) -->
+    <!-- 1. Definiciones de los componentes -->
+    <script src="../../js/components/modals/modal_edit_record.js"></script>
+    <script src="../../js/components/confim dialog/confirm_dialog.js"></script>
+    <!-- 2. Orquestador y lógica de la página -->
     <script src="../../js/main.js"></script>
     <script src="../../js/administrar_registros.js"></script>
 </body>
