--- a/Finaizen/src/pages/User/presupuestos.html
+++ b/Finaizen/src/pages/User/presupuestos.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="../../css/style/base/main.css">
     <link rel="stylesheet" href="../../css/style/components/sidebar.css">
     <link rel="stylesheet" href="../../css/style/pages/presupuestos.css">
+    <!-- AÑADIR LOS CSS DE LOS COMPONENTES -->
+    <link rel="stylesheet" href="../../css/style/components/modals/modal_budget.css">
+    <link rel="stylesheet" href="../../css/style/components/confirm dialog/confirm_dialog.css">
 </head>
 <body>
+    <!-- AÑADIR LOS PLACEHOLDERS -->
+    <div id="budget-modal-placeholder"></div>
+    <div id="confirm-dialog-placeholder"></div>
+
     <div class="container">
         <!-- El Sidebar se carga aquí -->
         <div id="sidebar-container" data-sidebar="user"></div>
@@ -30,7 +37,10 @@
         </main>
     </div>
 
-    <!-- Scripts -->
+    <!-- 1. Definiciones de los componentes -->
+    <script src="../../js/components/modals/modal_budget.js"></script>
+    <script src="../../js/components/confim dialog/confirm_dialog.js"></script>
+    <!-- 2. Orquestador y lógica de la página -->
     <script src="../../js/main.js"></script>
     <script src="../../js/presupuestos.js"></script>
 </body>
