--- a/Finaizen/src/pages/Admin/reportes-soporte.html
+++ b/Finaizen/src/pages/Admin/reportes-soporte.html
@@ -30,6 +30,22 @@
     </div>
 </div>
 
+<div id="view-modal" class="modal-overlay">
+    <div class="modal-content">
+        <h3>Detalle del Reporte de Soporte</h3>
+        <div class="report-details">
+            <p><strong>Reporte ID:</strong> <span id="view-report-id"></span></p>
+            <p><strong>Usuario:</strong> <span id="view-report-user"></span></p>
+            <p><strong>Asunto:</strong> <span id="view-report-subject"></span></p>
+            <p><strong>Fecha de Creación:</strong> <span id="view-report-date"></span></p>
+            <p><strong>Estado:</strong> <span id="view-report-status"></span></p>
+                        <p><strong>Detalle:</strong> <span id="view-report-detail">No hay un campo de detalle en los datos de ejemplo, pero aquí se mostraría.</span></p>
+        </div>
+        <div class="modal-actions">
+            <button id="view-modal-close" class="btn-cancel">Cerrar</button>
+        </div>
+    </div>
+</div>
 
 <div class="container">
     <div id="sidebar-container" data-sidebar="admin"></div>
