--- a/Finaizen/src/pages/Admin/inteligencia-mercado.html
+++ b/Finaizen/src/pages/Admin/inteligencia-mercado.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inteligencia de Mercado | Admin Panel</title>
+
+    <!-- ⚡ VERIFICACIÓN INMEDIATA DE AUTENTICACIÓN -->
+    <script src="../../js/auth/authCheck.js"></script>
+
     <!-- Estilos generales y del dashboard que ya tienes -->
     <link rel="stylesheet" href="../../css/style/base/main.css">
     <link rel="stylesheet" href="../../css/style/components/sidebar.css">
@@ -100,8 +104,17 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="../../js/auth/sessionManager.js"></script>
+<script src="../../js/auth/authGuard.js"></script>
 <script src="../../js/inteligencia-mercado.js"></script>
 <script src="../../js/main.js"></script>
+
+<script>
+    // Proteger esta página - solo admins
+    document.addEventListener('DOMContentLoaded', () => {
+        AuthGuard.requireAdmin();
+    });
+</script>
 </body>
 </html>
 
