--- a/Finaizen/src/pages/Base/index.html
+++ b/Finaizen/src/pages/Base/index.html
@@ -167,6 +167,8 @@
         </div>
     </footer>
 
+    <script src="../../js/auth/sessionManager.js"></script>
+    <script src="../../js/auth/authGuard.js"></script>
     <script src="../../js/navbar_main.js"></script>
 </body>
 </html>
