--- a/Finaizen/src/pages/Base/login.html
+++ b/Finaizen/src/pages/Base/login.html
@@ -147,6 +147,8 @@
         </div>
     </footer>
 
+    <script src="../../js/auth/sessionManager.js"></script>
+    <script src="../../js/auth/authGuard.js"></script>
     <script src="../../js/navbar_main.js"></script>
     <script src="../../js/inicio_sesion.js"></script>
 </body>
