--- a/Finaizen/src/pages/User/administrar_registros.html
+++ b/Finaizen/src/pages/User/administrar_registros.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrar Registros | Finaizen</title>
+    
+    <!-- ⚡ VERIFICACIÓN INMEDIATA DE AUTENTICACIÓN (ANTES de cualquier contenido) -->
+    <script src="../../js/auth/authCheck.js"></script>
+    
     <!-- CSS Global y Específico -->
     <link rel="stylesheet" href="../../css/style/base/main.css">
     <link rel="stylesheet" href="../../css/style/components/sidebar.css">
@@ -75,11 +79,20 @@
     </div>
 
      <!-- Scripts (el orden es importante) -->
+    <script src="../../js/auth/sessionManager.js"></script>
+    <script src="../../js/auth/authGuard.js"></script>
     <!-- 1. Definiciones de los componentes -->
     <script src="../../js/components/modals/modal_edit_record.js"></script>
     <script src="../../js/components/confim dialog/confirm_dialog.js"></script>
     <!-- 2. Orquestador y lógica de la página -->
     <script src="../../js/main.js"></script>
     <script src="../../js/administrar_registros.js"></script>
+
+    <script>
+        // Proteger esta página - solo usuarios autenticados
+        document.addEventListener('DOMContentLoaded', () => {
+            AuthGuard.requireUser();
+        });
+    </script>
 </body>
 </html>
