--- a/Finaizen/src/pages/Admin/reportes-soporte.html
+++ b/Finaizen/src/pages/Admin/reportes-soporte.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reportes de Soporte | Admin Panel</title>
+
+    <!-- ⚡ VERIFICACIÓN INMEDIATA DE AUTENTICACIÓN -->
+    <script src="../../js/auth/authCheck.js"></script>
+
     <link rel="stylesheet" href="../../css/style/base/main.css">
     <link rel="stylesheet" href="../../css/style/components/sidebar.css">
     <link rel="stylesheet" href="../../css/style/pages/reportes_soporte.css">
@@ -100,8 +104,17 @@
     </main>
 </div>
 
+<script src="../../js/auth/sessionManager.js"></script>
+<script src="../../js/auth/authGuard.js"></script>
 <script src="../../js/reportes-soporte.js"></script>
 <script src="../../js/main.js"></script>
+
+<script>
+    // Proteger esta página - solo admins
+    document.addEventListener('DOMContentLoaded', () => {
+        AuthGuard.requireAdmin();
+    });
+</script>
 </body>
 </html>
 
