--- a/Finaizen/src/pages/Base/register.html
+++ b/Finaizen/src/pages/Base/register.html
@@ -274,6 +274,8 @@
         </div>
     </footer>
 
+    <script src="../../js/auth/sessionManager.js"></script>
+    <script src="../../js/auth/authGuard.js"></script>
     <script src="../../js/navbar_main.js"></script>
     <script src="../../js/registro_usuario.js"></script>
 </body>
