--- a/Finaizen/src/pages/User/config_ayuda.html
+++ b/Finaizen/src/pages/User/config_ayuda.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda y Reportes | Finaizen</title>
+    
+    <!-- ⚡ VERIFICACIÓN INMEDIATA DE AUTENTICACIÓN (ANTES de cualquier contenido) -->
+    <script src="../../js/auth/authCheck.js"></script>
+    
     <!-- Estilos base y del sidebar -->
     <link rel="stylesheet" href="../../css/style/base/main.css">
     <link rel="stylesheet" href="../../css/style/components/sidebar.css">
@@ -45,7 +49,16 @@
     </div>
 
     <!-- JS para cargar el sidebar y manejar interacciones -->
+    <script src="../../js/auth/sessionManager.js"></script>
+    <script src="../../js/auth/authGuard.js"></script>
     <script src="../../js/configAyuda.js"></script>
     <script src="../../js/main.js"></script>
+
+    <script>
+        // Proteger esta página - solo usuarios autenticados
+        document.addEventListener('DOMContentLoaded', () => {
+            AuthGuard.requireUser();
+        });
+    </script>
 </body>
 </html>
