--- a/Finaizen/src/pages/User/dashboard.html
+++ b/Finaizen/src/pages/User/dashboard.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard | Finaizen</title>
+  
+  <!-- ⚡ VERIFICACIÓN INMEDIATA DE AUTENTICACIÓN (ANTES de cualquier contenido) -->
+  <script src="../../js/auth/authCheck.js"></script>
+  
   <link rel="stylesheet" href="../../css/style/base/main.css">
     <link rel="stylesheet" href="../../css/style/components/sidebar.css">
   <link rel="stylesheet" href="../../css/style/pages/dashboard_user.css">
@@ -82,7 +86,16 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="../../js/auth/sessionManager.js"></script>
+  <script src="../../js/auth/authGuard.js"></script>
   <script src="../../js/dashboardUser.js"></script>
   <script src="../../js/main.js"></script>
+
+  <script>
+    // Proteger esta página - solo usuarios autenticados
+    document.addEventListener('DOMContentLoaded', () => {
+        AuthGuard.requireUser();
+    });
+  </script>
 </body>
 </html>
